--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.DATN_MD03_UngDungMuaBanGiaySneakZone"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false" />
 
         <activity
-            android:name=".DangKy"
+            android:name=".Activity.DangKy"
             android:exported="false" />
         <activity
-            android:name=".DangNhap"
+            android:name=".Activity.DangNhap"
             android:exported="false" />
         <activity
             android:name=".ManHinhChao"
