--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,25 @@
         android:theme="@style/Theme.DATN_MD03_UngDungMuaBanGiaySneakZone"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.Activity_CTDH_DaGiao"
+            android:name=".Activity.ThemDiaChiActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.Activity_CTDH_HuyDH"
+            android:name=".Activity.ShowListLocationActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.Activity_CTDH_DangGiao"
+            android:name=".Activity.Activity_ThanhToan"
             android:exported="false" />
         <activity
-            android:name=".Activity.Activity_CTDH_ChoXacNhan"
+            android:name=".ManHinhChao"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DangNhap"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DangKy"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.Activity_QuenMatKhau"
             android:exported="false" />
         <activity
             android:name=".Activity.Activity_DonHang"
