--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,25 +17,23 @@
         android:theme="@style/Theme.DATN_MD03_UngDungMuaBanGiaySneakZone"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.ThemDiaChiActivity"
-            android:exported="false" />
-        <activity
             android:name=".Activity.ShowListLocationActivity"
             android:exported="false" />
+
         <activity
             android:name=".Activity.Activity_ThanhToan"
             android:exported="false" />
         <activity
-            android:name=".ManHinhChao"
+            android:name=".Activity.Activity_CTDH_DaGiao"
             android:exported="false" />
         <activity
-            android:name=".Activity.DangNhap"
+            android:name=".Activity.Activity_CTDH_HuyDH"
             android:exported="false" />
         <activity
-            android:name=".Activity.DangKy"
+            android:name=".Activity.Activity_CTDH_DangGiao"
             android:exported="false" />
         <activity
-            android:name=".Activity.Activity_QuenMatKhau"
+            android:name=".Activity.Activity_CTDH_ChoXacNhan"
             android:exported="false" />
         <activity
             android:name=".Activity.Activity_DonHang"
