--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DATN_MD03_UngDungMuaBanGiaySneakZone"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
+        >
         <activity
             android:name=".Activity.ShowListLocationActivity"
             android:exported="false" />
@@ -62,8 +64,13 @@
         <activity
             android:name=".Activity.Activity_Profile"
             android:exported="false" />
+        <activity android:name=".Activity.DangKy"
+            android:exported="false" />
+        <activity android:name=".Activity.Activity_QuenMatKhau"
+            android:exported="false" />
+
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.DangNhap"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
