--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.Activity_Manhinhxacthucdangky"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.Activity_manhinhguimadangky"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.Manhinhguimathaydoimatkhau"
+            android:exported="false" />
+        <activity
             android:name=".Activity.xacthucemailmoi"
             android:exported="false" />
         <activity
