--- a/doan/package.json
+++ b/doan/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.3",
     "apexcharts": "^3.54.1",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
