namanh code hoan thien chuc nang doi mat khau va hien thi nguoi dung thanh cong

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".Activity.Manhinhguimathaydoimatkhau"
             android:exported="false" />
         <activity
+            android:name=".Activity.Xacthucmathaydoimatkhau"
+            android:exported="false" />
+
+        <activity
             android:name=".Activity.xacthucemailmoi"
             android:exported="false" />
         <activity
