--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <!-- Các quyền cần thiết -->
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" /> <!-- Quyền cho truy cập ảnh trên Android 13 (API 33) trở lên -->
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" /> <!-- Quyền cũ cho các phiên bản Android dưới 13 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Tính năng phần cứng camera (không bắt buộc) -->
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
-        android:requestLegacyExternalStorage="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DATN_MD03_UngDungMuaBanGiaySneakZone"
-        android:usesCleartextTraffic="true">
-        <activity
-            android:name=".Activity.Manhinhthanhconganimation"
-            android:exported="false" />
-        <!-- Khai báo các Activity -->
-        <activity
-            android:name=".Activity.activity_update_avatar"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.CapnhathotenActivity"
-            android:exported="false" />
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
         <activity
             android:name=".Activity.Activity_Manhinhxacthucdangky"
             android:exported="false" />
@@ -44,6 +30,7 @@
         <activity
             android:name=".Activity.Xacthucmathaydoimatkhau"
             android:exported="false" />
+
         <activity
             android:name=".Activity.xacthucemailmoi"
             android:exported="false" />
