--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,15 @@
         android:theme="@style/Theme.DATN_MD03_UngDungMuaBanGiaySneakZone"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ThongbaodsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity_notifications"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.item_notification"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ActivityLocation"
             android:exported="false" />
         <activity
@@ -93,9 +102,6 @@
             android:exported="false" />
         <activity
             android:name=".Activity.Activity_SP_PhoBien"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.Activity_Notifications"
             android:exported="false" />
         <activity
             android:name=".Activity.Activity_YeuThich"
