--- a/doan/package.json
+++ b/doan/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.21.3",
     "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
