nam anh day code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
             android:name=".Activity.QRCodeCartActivity"
             android:exported="false" />
         <activity
+            android:name=".Activity.QRCodeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ThongbaodsActivity"
             android:exported="false" /> <!-- <activity -->
         <!-- android:name=".activity_notifications" -->
