hieu fix upload

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
         <activity
             android:name=".Activity.QRCodeCartActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".Activity.QRCodeActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.QRCodeActivity"
             android:exported="false" />
